--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   publisher={IEEE},
   code={https://github.com/tomtang502/simultaneous_pose_geometry.git},
   bibtex_show={true},
-  pdf={https://arxiv.org/pdf/2407.10331},
+  pdf={https://ieeexplore.ieee.org/document/10756717},
   preview={segpo.png}
 }
 
