--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,56 +3,70 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{zhi2024teaching,
+  title       = {Teaching Periodic Stable Robot Motion Generation Via Sketch},
+  author      = {Zhi, Weiming and Tang, Haozhan and Zhang, Tianyi and Johnson-Roberson, Matthew},
+  journal     = {IEEE Robotics and Automation Letters},
+  note        = {Also in Proceedings of ICRA, 2025},
+  pdf         = {https://ieeexplore.ieee.org/document/10804075},
+  year        = {2024},
+  bibtex_show = {true},
+  publisher   = {IEEE},
+  preview     = {oas.png}
+}
+
 @article{zhi2024simultaneous,
-  title={Simultaneous Estimation of Geometry and Pose of Held Objects via 3D Foundation Models},
-  author={Zhi, Weiming and Tang, Haozhan and Zhang, Tianyi and Johnson-Roberson, Matthew},
-  journal={IEEE Robotics and Automation Letters},
-  year={2024},
-  publisher={IEEE},
-  code={https://github.com/tomtang502/simultaneous_pose_geometry.git},
-  bibtex_show={true},
-  pdf={https://ieeexplore.ieee.org/document/10756717},
-  preview={segpo.png}
+  title       = {Simultaneous Estimation of Geometry and Pose of Held Objects via 3D Foundation Models},
+  author      = {Zhi, Weiming and Tang, Haozhan and Zhang, Tianyi and Johnson-Roberson, Matthew},
+  journal     = {IEEE Robotics and Automation Letters},
+  note        = {Also in Proceedings of ICRA, 2025},
+  year        = {2024},
+  publisher   = {IEEE},
+  code        = {https://github.com/tomtang502/simultaneous_pose_geometry.git},
+  bibtex_show = {true},
+  pdf         = {https://ieeexplore.ieee.org/document/10756717},
+  preview     = {segpo.png}
 }
 
 @article{zhi2024unifying,
-  title={Unifying Representation and Calibration With 3D Foundation Models},
-  author={Zhi, Weiming and Tang, Haozhan and Zhang, Tianyi and Johnson-Roberson, Matthew},
-  journal={IEEE Robotics and Automation Letters},
-  year={2024},
-  publisher={IEEE},
-  code={https://github.com/tomtang502/arm_3d_reconstruction.git},
-  bibtex_show={true},
-  pdf={https://ieeexplore.ieee.org/abstract/document/10659118?casa_token=1Yqr4Z02V6kAAAAA:iYkiCz1aK0JpPD2HRgqMFqizP5hghFY0QHpQJxL2FxRN0107b8H8wQKiBf02-voY_gpVOp0r},
-  preview={jcr.png}
+  title       = {Unifying Representation and Calibration With 3D Foundation Models},
+  author      = {Zhi, Weiming and Tang, Haozhan and Zhang, Tianyi and Johnson-Roberson, Matthew},
+  journal     = {IEEE Robotics and Automation Letters},
+  note        = {Also in Proceedings of ICRA, 2025},
+  year        = {2024},
+  publisher   = {IEEE},
+  code        = {https://github.com/tomtang502/arm_3d_reconstruction.git},
+  bibtex_show = {true},
+  pdf         = {https://ieeexplore.ieee.org/abstract/document/10659118?casa_token=1Yqr4Z02V6kAAAAA:iYkiCz1aK0JpPD2HRgqMFqizP5hghFY0QHpQJxL2FxRN0107b8H8wQKiBf02-voY_gpVOp0r},
+  preview     = {jcr.png}
 }
 
 @article{tang2024quantum,
-  title={Quantum Dueling: an Efficient Solution for Combinatorial Optimization},
-  author={Tang, Letian and Wang, Haorui and Li, Zhengyang and Tang, Haozhan and Zhang, Chi and Li, Shujin},
-  journal={Physica Scripta},
-  volume={99},
-  number={5},
-  pages={055104},
-  year={2024},
-  publisher={IOP Publishing},
-  code={https://github.com/DavidWang19/Quantum-Dueling-New.git},
-  bibtex_show={true},
-  pdf={https://iopscience.iop.org/article/10.1088/1402-4896/ad2e55},
-  preview={quantumdueling.png}
-
+  title       = {Quantum Dueling: an Efficient Solution for Combinatorial Optimization},
+  author      = {Tang, Letian and Wang, Haorui and Li, Zhengyang and Tang, Haozhan and Zhang, Chi and Li, Shujin},
+  journal     = {Physica Scripta},
+  volume      = {99},
+  number      = {5},
+  pages       = {055104},
+  year        = {2024},
+  note        = {In proceeding of QIP, 2024},
+  publisher   = {IOP Publishing},
+  code        = {https://github.com/DavidWang19/Quantum-Dueling-New.git},
+  bibtex_show = {true},
+  pdf         = {https://iopscience.iop.org/article/10.1088/1402-4896/ad2e55},
+  preview     = {quantumdueling.png}
 }
 
 @inproceedings{tang2021application,
-  title={Application of Artificial Neural Network (ANN) and Feature Selection Algorithm (FSA) on the ATLAS Experiment Data to Identify Higgs Boson},
-  author={Tang, Haozhan},
-  booktitle={Journal of Physics: Conference Series},
-  volume={1873},
-  number={1},
-  pages={012072},
-  year={2021},
-  organization={IOP Publishing},
-  bibtex_show={true},
-  pdf={https://iopscience.iop.org/article/10.1088/1742-6596/1873/1/012072},
-  preview={annfsahiggboson.png}
+  title        = {Application of Artificial Neural Network (ANN) and Feature Selection Algorithm (FSA) on the ATLAS Experiment Data to Identify Higgs Boson},
+  author       = {Tang, Haozhan},
+  booktitle    = {Journal of Physics: Conference Series},
+  volume       = {1873},
+  number       = {1},
+  pages        = {012072},
+  year         = {2021},
+  organization = {IOP Publishing},
+  bibtex_show  = {true},
+  pdf          = {https://iopscience.iop.org/article/10.1088/1742-6596/1873/1/012072},
+  preview      = {annfsahiggboson.png}
 }
