Add new articles to bibliography
Added two articles related to camera calibration and 3D representations.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,26 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{tang2025bi,
+  title       = {Bi-Manual Joint Camera Calibration and Scene Representation},
+  author      = {Tang, Haozhan and Zhang, Tianyi and Johnson-Roberson, Matthew and Zhi, Weiming},
+  journal     = {RSS 2025 RoboReps},
+  pdf         = {https://arxiv.org/pdf/2505.24819},
+  year        = {2025},
+  bibtex_show = {true},
+  preview     = {bijcr.png}
+}
+
+@article{tang2025graphseg,
+  title       = {GraphSeg: Segmented 3D Representations via Graph Edge Addition and Contraction},
+  author      = {Tang, Haozhan and Zhang, Tianyi and Kroemer, Oliver and Johnson-Roberson, Matthew and Zhi, Weiming},
+  journal     = {RSS 2025 RoboReps},
+  pdf         = {https://arxiv.org/pdf/2504.03129},
+  year        = {2025},
+  bibtex_show = {true},
+  preview     = {grasp.gif}
+}
+
 @article{zhi2024teaching,
   title       = {Teaching Periodic Stable Robot Motion Generation Via Sketch},
   author      = {Zhi, Weiming and Tang, Haozhan and Zhang, Tianyi and Johnson-Roberson, Matthew},
