--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
   year        = {2025},
   bibtex_show = {true},
   preview     = {bijcr.png}
+  project     = {https://tomtang502.github.io/bijcr_web/}
 }
 
 @article{tang2025graphseg,
@@ -21,6 +22,7 @@
   year        = {2025},
   bibtex_show = {true},
   preview     = {grasp.gif}
+  code        = {https://github.com/tomtang502/graphseg}
 }
 
 @article{zhi2024teaching,
