Fix formatting for preview entries in papers.bib

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   pdf         = {https://arxiv.org/pdf/2505.24819},
   year        = {2025},
   bibtex_show = {true},
-  preview     = {bijcr.png}
+  preview     = {bijcr.png},
   project     = {https://tomtang502.github.io/bijcr_web/}
 }
 
@@ -21,7 +21,7 @@
   pdf         = {https://arxiv.org/pdf/2504.03129},
   year        = {2025},
   bibtex_show = {true},
-  preview     = {grasp.gif}
+  preview     = {grasp.gif},
   code        = {https://github.com/tomtang502/graphseg}
 }
 
