Update bibliography entries for project and preview
Replaced 'project' field with 'code' in the first entry and updated the 'preview' field in the second entry.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   year        = {2025},
   bibtex_show = {true},
   preview     = {bijcr.png},
-  project     = {https://tomtang502.github.io/bijcr_web/}
+  code        = {https://tomtang502.github.io/bijcr_web/}
 }
 
 @article{tang2025graphseg,
@@ -21,7 +21,7 @@
   pdf         = {https://arxiv.org/pdf/2504.03129},
   year        = {2025},
   bibtex_show = {true},
-  preview     = {grasp.gif},
+  preview     = {graphseg.gif},
   code        = {https://github.com/tomtang502/graphseg}
 }
 
