--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @article{tang2025bi,
   title       = {Bi-Manual Joint Camera Calibration and Scene Representation},
   author      = {Tang, Haozhan and Zhang, Tianyi and Johnson-Roberson, Matthew and Zhi, Weiming},
-  journal     = {RSS 2025 RoboReps},
+  journal     = {RSS RoboReps},
   pdf         = {https://arxiv.org/pdf/2505.24819},
   year        = {2025},
   bibtex_show = {true},
@@ -17,7 +17,7 @@
 @article{tang2025graphseg,
   title       = {GraphSeg: Segmented 3D Representations via Graph Edge Addition and Contraction},
   author      = {Tang, Haozhan and Zhang, Tianyi and Kroemer, Oliver and Johnson-Roberson, Matthew and Zhi, Weiming},
-  journal     = {RSS 2025 RoboReps},
+  journal     = {RSS RoboReps},
   pdf         = {https://arxiv.org/pdf/2504.03129},
   year        = {2025},
   bibtex_show = {true},
